--- a/_posts/2018-06-26-x923-padding.md
+++ b/_posts/2018-06-26-x923-padding.md
@@ -5,7 +5,7 @@ date:   2018-06-26 13:38:00 +0900
 categories: java crypto
 ---
 
-### padding?
+## padding?
 
 * SEED, ARIA, AES등 암호화 알고리즘은 지정된 block Size 단위로 암호화 복호화를 수행한다
 * 암복호화 하려는 입력 데이터를 block Size 단위로 쪼개어 반복 호출하여 전체 데이터를 암복호화 할 수 있다
@@ -14,7 +14,7 @@ categories: java crypto
 
 참고자료: https://www.di-mgt.com.au/cryptopad.html
 
-### X923
+## X923
 
 (in_data, out_data, padded의 데이터 표현은 모두 16진수이다)
 
@@ -56,7 +56,7 @@ categories: java crypto
 
 참고자료: bouncycastle https://github.com/bcgit/bc-java/blob/master/core/src/main/java/org/bouncycastle/crypto/paddings/X923Padding.java
 
-### egov X923
+## egov X923
 
 전자정부프레임워크의 X923 Padding 알고리즘은 입력 데이터가 block Size 의 배수인 경우 padding을 하지 않고 있다.
 그로 인해 데이터 복원 시 정상적으로 되지 않을 수 있다. 아래는 Padding 클래스만을 테스트한 코드이다.
