--- a/_posts/2018-06-26-x923-padding.md
+++ b/_posts/2018-06-26-x923-padding.md
@@ -44,10 +44,10 @@ categories: java crypto
   * padded1 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e <span style="color: red;">01</span>
   * in_data2 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 01
   * padded2 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 01
-  * 두 개 입력값에 대한 결과값이 같게 나오게 된다. 이후 padding 을 제거하려하면 \
-  data1 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e \
-  data2 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 01 \
-  padding 전의 원본 데이터가 data1, data2 중 어느 것인지 판단할 수가 없다
+  * 두 개 입력값에 대한 결과값이 같게 나오게 된다. 이후 padding 을 제거하려하면
+  * data1 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e
+  * data2 = 00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 01
+  * padding 전의 원본 데이터가 data1, data2 중 어느 것인지 판단할 수가 없다
 
 * 입력 데이터가 block Size의 배수일 경우 padding 방법
   * block Size 만큼 padding 하는 것이다
