padding 소스 본문내에 추가

--- a/_posts/2018-06-26-x923-padding.md
+++ b/_posts/2018-06-26-x923-padding.md
@@ -245,3 +245,29 @@ unpad:6E 05 E6 17 D9 BB F1 34 64 D8 45 C5 99 58 95 50 1C AF 96 71 55 11 4E 91 FD
 1. 수정된 padding 알고리즘으로 변환한다. 이 경우 입력값이 block Size의 배수인 경우 padding 결과가 다르기 때문에 데이터 변환 작업이 필요하다. (기존 padding알고리즘으로 제거 후 신규 padding 알고리즘으로 추가)
 
 수정된 자바 코드: {{ site.url }}{{ site.baseurl }}/assets/java/AnsiX923Padding.java
+
+{% highlight java %}
+public class AnsiX923Padding {
+    private static final byte PADDING_VALUE = 0x00;
+
+    public byte[] addPadding(byte[] source, int blockSize) {
+        int paddingCnt = blockSize - (source.length % blockSize);
+        byte[] padded = new byte[source.length + paddingCnt];
+
+        System.arraycopy(source, 0, padded, 0, source.length);
+        Arrays.fill(padded, source.length, padded.length - 1, PADDING_VALUE);
+        padded[padded.length - 1] = (byte) paddingCnt;
+
+        return padded;
+    }
+
+    public byte[] removePadding(byte[] source, int blockSize) {
+        int paddingCnt = source[source.length - 1];
+        
+        byte[] unpadded = new byte[source.length - paddingCnt];
+        System.arraycopy(source, 0, unpadded, 0, unpadded.length);
+
+        return unpadded;
+    }
+}
+{% endhighlight %}
