--- a/_posts/2019-12-17-python정리.md
+++ b/_posts/2019-12-17-python정리.md
@@ -47,7 +47,7 @@ base64.b64decode('c3RyaW5n').decode()
 
 ## hashlib
 
-## sha1, sha256, md5 등 hash 함수 사용
+### sha1, sha256, md5 등 hash 함수 사용
 
 ```python
 input = 'data'.encode()
@@ -62,4 +62,34 @@ hash1.hex()
 # a17c9aaa61e80a1bf71d0d850af4e5baa9800bbd
 ```
 
+
+## 정규식 regex
+
+```python
+import re
+regex = re.compile('[0-9]+')
+
+# match 함수는 문자열 시작부터 패턴에 맞는 부분을 찾는다.
+m = regex.match('123')
+matched = m is not None
+print(matched) # True
+
+# 전체가 패턴에 맞을 필요는 없다. 일부만이라도 패턴에 맞으면 통과한다.
+m = regex.match('123 aa')
+matched = m is not None
+print(matched) # True
+print(m.group()) # 123  : 매치되는 부분 출력
+
+# 하지만 첫부분은 맞아야 한다.
+m = regex.match('bb 123 aa')
+matched = m is not None
+print(matched) # False
+
+# 전체 문자열이 패턴에 맞아야 한다면. 패턴에 \Z 를 추가하면 된다.
+regex = re.compile('[0-9]+\\Z') # 혹은 r'[0-9]+\Z'
+m = regex.match('123 aa')
+matched = m is not None
+print(matched) # False
+
+```
 
