raid 볼륨 내용 추가

--- a/_posts/2020-12-06-lvm.md
+++ b/_posts/2020-12-06-lvm.md
@@ -67,6 +67,13 @@ root@pve:~# lvcreate -L 59G -n lv01 vg01
   Logical volume "lv01" created.
 ```
 
+파티션 생성 작업 없이 디스크에 바로 pv를 생성할 수도 있다.
+```
+root@pve:~# pvcreate /dev/sdc
+root@pve:~# vgcreate vg01 /dev/sdc
+root@pve:~# lvcreate -L 59G -n lv01 vg01
+```
+
 볼륨이 생성됐다.
 ext4 파티션으로 포맷한 후 mount한다.
 
@@ -89,6 +96,77 @@ root@pve:~# mkdir lv01
 root@pve:~# mount /dev/vg01/lv01 lv01
 root@pve:~# mount
 /dev/mapper/vg01-lv01 on /root/lv01 type ext4 (rw,relatime)
+```
+
+### raid 볼륨 생성하기
+
+3개 디스크를 갖는 vg를 만든다.
+```
+vgcreate vg01 /dev/sdb1 /dev/sdc1 /dev/sdd1
+```
+
+raid0 볼륨을 만든다. -i3는 --stripes 3과 같으며 3개 디스크에 나누어 저장된다.
+```
+root@pve:~# lvcreate --type raid0 -L 10G -i3 -n lv01 vg01
+  Using default stripesize 64.00 KiB.
+  Rounding size 10.00 GiB (2560 extents) up to stripe boundary size <10.01 GiB(2562 extents).
+  Logical volume "lv01" created.
+
+root@pve:~# lvs -ao +devices vg01 | grep lv01
+  lv01            vg01 rwi-a-r---  <10.01g lv01_rimage_0(0),lv01_rimage_1(0),lv01_rimage_2(0)                                 
+  [lv01_rimage_0] vg01 iwi-aor---   <3.34g /dev/sdd1(484755)                                                                  
+  [lv01_rimage_1] vg01 iwi-aor---   <3.34g /dev/sdb1(42667)                                                                   
+  [lv01_rimage_2] vg01 iwi-aor---   <3.34g /dev/sdc1(17249)  
+
+root@pve:~# lvremove vg01/lv01
+Do you really want to remove and DISCARD active logical volume vg01/lv01? [y/n]: y
+  Logical volume "lv01" successfully removed
+```
+
+raid5 볼륨을 만든다. stripes 개수는 사용할 디스크 개수-1로 입력해야 한다. (-i2 => 디스크 3개 사용)
+```
+root@pve:~# lvcreate --type raid5 -L 10G -i2 -n lv01 vg01
+  Using default stripesize 64.00 KiB.
+  Logical volume "lv01" created.
+
+root@pve:~# lvs -ao +devices vg01 | grep lv01
+  lv01            vg01 rwi-a-r---   10.00g  lv01_rimage_0(0),lv01_rimage_1(0),lv01_rimage_2(0)                                 
+  [lv01_rimage_0] vg01 Iwi-aor---    5.00g  /dev/sdd1(484756)                                                                  
+  [lv01_rimage_1] vg01 Iwi-aor---    5.00g  /dev/sdb1(42668)                                                                   
+  [lv01_rimage_2] vg01 Iwi-aor---    5.00g  /dev/sdc1(17250)                                                                   
+  [lv01_rmeta_0]  vg01 ewi-aor---    4.00m  /dev/sdd1(484755)                                                                  
+  [lv01_rmeta_1]  vg01 ewi-aor---    4.00m  /dev/sdb1(42667)                                                                   
+  [lv01_rmeta_2]  vg01 ewi-aor---    4.00m  /dev/sdc1(17249) 
+
+root@pve:~# lvremove vg01/lv01
+Do you really want to remove and DISCARD active logical volume vg01/lv01? [y/n]: y
+  Logical volume "lv01" successfully removed
+```
+
+stripe 볼륨을 만든다. raid0과 비슷하지만 이후 용량을 추가할 때 디스크 개수를 다르게 지정할 수 있다.
+```
+root@pve:~# lvcreate -L 10G -i3 -n lv01 vg01
+  Using default stripesize 64.00 KiB.
+  Rounding size 10.00 GiB (2560 extents) up to stripe boundary size <10.01 GiB(2562 extents).
+  Logical volume "lv01" created.
+
+root@pve:~# lvs -ao +devices vg01/lv01
+  LV   VG   Attr       LSize   Pool Origin Data%  Meta%  Move Log Cpy%Sync Convert Devices                                            
+  lv01 vg01 -wi-a----- <10.01g                                                     /dev/sdd1(484755),/dev/sdb1(42667),/dev/sdc1(17249)
+
+root@pve:~# lvextend -L +10G -i2 vg01/lv01
+  Using stripesize of last segment 64.00 KiB
+  Size of logical volume vg01/lv01 changed from <10.01 GiB (2562 extents) to <20.01 GiB (5122 extents).
+  Logical volume vg01/lv01 successfully resized.
+
+root@pve:~# lvs -ao +devices vg01/lv01
+  LV   VG   Attr       LSize   Pool Origin Data%  Meta%  Move Log Cpy%Sync Convert Devices                                            
+  lv01 vg01 -wi-a----- <20.01g                                                     /dev/sdd1(484755),/dev/sdb1(42667),/dev/sdc1(17249)
+  lv01 vg01 -wi-a----- <20.01g                                                     /dev/sdd1(485609),/dev/sdb1(43521)  
+
+root@pve:~# lvremove vg01/lv01
+Do you really want to remove and DISCARD active logical volume vg01/lv01? [y/n]: y
+  Logical volume "lv01" successfully removed
 ```
 
 ### lv 삭제하기
