disk 제거 명령어 수정

--- a/_posts/2020-12-06-lvm.md
+++ b/_posts/2020-12-06-lvm.md
@@ -267,5 +267,5 @@ Do you really want to remove and DISCARD logical volume wd04/CacheDataLV? [y/n]:
 pvmove /dev/sdc1
 
 # vg에서 /dev/sdc1를 제거한다.
-vgremove wd04 /dev/sdc1
+vgreduce wd04 /dev/sdc1
 ```
